--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --color-text: #555555;
     --color-borders: #bbbbbb;
     --color-separators: #eeeeee;
+    --color-header-bg-circle: #ffca93;
 }
 
 html {
@@ -82,7 +83,7 @@ ul, ol {
 
 .nav {
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     gap: 1em;
 }
 
@@ -95,6 +96,10 @@ ul, ol {
     flex: 1 0 23%;
     padding: 1em;
     text-align: center;
+}
+
+.header-avatar {
+    display: none;
 }
 
 /**/
@@ -163,11 +168,13 @@ ul, ol {
 
 .card__img {
     max-width: 80px;
+    /* width: 80px;
+    height: 80px; */
     margin-bottom: 4.5rem;
 }
 
 .card__title {
-    margin-top: 2em;;
+    margin-top: 2em;
 }
 
 .card__text {
@@ -184,23 +191,24 @@ ul, ol {
 
 .awards-list {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
     gap: 1em;
     margin-bottom: 0;
 }
 
 .awards-list__item {
     display: flex;
-    width: 100%;
+    height: 100%;
     align-items: center;
     border-radius: 1em;
     background-color: white;
     padding: 1em;
+    gap: 1em;
+    flex-flow: row nowrap;
 }
 
 .awards-list__item img {
     max-width: 48px;
-    margin-right: 1em;
 }
 
 /**/
@@ -239,18 +247,18 @@ ul, ol {
 
 /* MY PORTFOLIO */
 
-.my-portfolio-list {
+.portfolio-list {
     display: grid;
     gap: 1em;
     margin-bottom: 0;
 }
 
-.portfolio-item-title {
+.portfolio-item__title {
     margin-bottom: 0;
 }
 
-.portfolio-item-time {
-    font-size: 0.8em;
+.portfolio-item__time {
+    font-size: 0.9em;
 }
 
 /**/
@@ -261,11 +269,7 @@ ul, ol {
     background-color: var(--color-bg);
 }
 
-.get-in-touch {
-    margin-top: 3rem;
-}
-
-.say-something {
+.contact-flex__item {
     margin-top: 3rem;
 }
 
@@ -351,13 +355,245 @@ ul, ol {
 /**/
 
 @media only screen and (min-width: 560px) {
+    /* HEADER */
+
+    .intro-text {
+        width: 50%;
+    }
+
+    .nav {
+        height: 3em;
+        align-items: center;
+    }
+
+    .nav__link {
+        background-color: unset;
+        color: var(--color-text);
+        border-radius: 0;
+        padding: 0 0 0.5em 0;
+        text-align: left;
+        border-bottom: 3px solid transparent;
+        /* width: fit-content; */
+        flex: 0 0 auto;
+    }
+
+    .nav__link:hover {
+        color: var(--color-title);
+        border-bottom: 3px solid var(--color-primary);
+    }
+
+    .nav__link:active {
+        /* border-bottom: 3px solid var(--color-primary); */
+    }
+
+    /**/
+
+    /* AWARDS */
+
+    .awards-list {
+        flex-flow: row nowrap;
+    }
     
+    .awards-list__item {
+        text-align: center;
+        padding: 2em;
+        flex-flow: column nowrap;
+        flex: 1 1 auto;
+        /* todo fix items size */
+    }
+
+    /**/
+
+    /* EXPERIENCE */
+
+    /*
+
+    .experience-list {
+        display: flex;
+        gap: 1em;
+        flex-flow: column nowrap;
+        margin-bottom: 0;
+    }
+
+    .experience-list__item {
+        background-color: var(--color-bg);
+        padding: 1em;
+        border-radius: 1em;
+        display: flex;
+    }
+
+    */
+
+    .experience-list__item {
+        padding: 2em;
+    }
+
+    .experience-item {
+        display: flex;
+        align-items: center;
+    }
+
+    .experience-item header {
+        flex: 1;
+        margin-right: 2em;
+    }
+
+    .experience-item__content {
+        padding-left: 2em;
+        flex: 3;
+        border-left: 1px solid var(--color-separators);
+    }
+
+    .experience-item__content .card__title {
+        margin-top: 1.5em;
+    }
+
+    .experience-item__content .card__text {
+        margin-bottom: 6px;
+    }
+
+
+    /**/
+    
+    /* PORTFOLIO */
+    
+    .portfolio-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    /**/
+
+    /* CONTACT */
+
+    .contact-flex {
+        margin-bottom: 2em;
+    }
+
+    /* todo lepsi nazev */
+    .input-group-md-inline {
+        display: flex;
+        flex-flow: row wrap;
+        gap: 1em;
+    }
+
+    .input-group-md-inline .form__input {
+        flex: 1;
+    }
+
+    /**/
+
+    /* FOOTER */
+
+    .footer {
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+
+    /**/
 }
 
 @media only screen and (min-width: 960px) {
+    /* HEADER */
+
+    header.section {
+        /* background: radial-gradient(1600px circle at 80vw 50%, var(--color-header-bg-circle) 20%, transparent 20.1%); */
+        /* todo avatar position: relative; */
+    }
+
+    .header-avatar {
+        /* todo  */
+        /* display: block;
+        width: 35%;
+        max-width: 388px;
+        position: absolute;
+        bottom: 0;
+        right: 4vw; */
+    }
+
+    /**/
+
+    /* BIOGRAPHY */
+
+    .biography {
+        display: flex;
+        /* align-items: center; */
+    }
+
+    .avatar {
+        flex: 1;
+        display: flex;
+        flex-flow: column nowrap;
+        margin-bottom: initial;
+        text-align: left;
+    }
+
+    .avatar__img {
+        margin: 1em 0;
+    }
+
+    .biography-content {
+        flex: 2;
+    }
+
+    /**/
+
+    /* WHAT I DO */
     
+    .what-i-do-list {
+        flex-flow: row nowrap;
+    }
+
+    .what-i-do-list__item {
+        flex: 1 1 auto;
+        /* todo fix items size */
+    }
+
+    /**/
+
+    /* EXPERIENCE */
+
+    /**/
+
+    /* PORTFOLIO */
+
+    .portfolio-list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    /**/
+
+    /* CONTACT */
+    
+    .contact-flex {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        gap: 1em;
+        margin-bottom: 1em;
+    }
+
+    .contact-flex__item {
+        flex: 1;
+        margin-top: 0;
+    }
+
+    /**/
 }
 
 @media only screen and (min-width: 1200px) {
+    .section {
+        padding-left: 20vw;
+        padding-right: 20vw;
+        /* width: 1140px; */
+    }
 
+    /* HEADER */
+
+    .header-avatar {
+        /* right: calc(20vw + 1em); */
+    }
+
+    /**/
 }
